--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cafe&Wifi API</title>
-</head>
-<body>
-    <h1>Welcome to the Cafe & Wifi API</h1>
-    <a href="https://documenter.getpostman.com/view/27914434/2s93sc5CvN">Click Here For API Documentation</a>
-</body>
-</html>
+{% extends 'bootstrap/base.html' %}
+{% block styles %}
+{{super()}}
+<link rel="stylesheet"
+      href="{{url_for('static', filename='css/styles.css')}}">
+{% endblock %}
+{% block title %}Coffee and Wifi{% endblock %}
+
+{% block content %}
+<div class="jumbotron text-center">
+    <div class="container">
+        <h1 class="display-4">☕️ Coffee & Wifi 💻</h1>
+        <p class="lead">Want to work in a cafe but need power and wifi?</p>
+        <hr class="my-4">
+        <p>You've found the right place! Checkout my collection of cafes with data on power socket availability, wifi speed and coffee quality.</p>
+        <a class="btn btn-warning btn-lg" href="{{url_for('cafes')}}" role="button">Show Me!</a>
+        <a class="btn btn-info btn-lg" href="https://documenter.getpostman.com/view/27914434/2s93sc5CvN">Click Here For API Documentation</a>
+    </div>
+</div>
+
+{% endblock %}
